src/objects/BGBK__Cart_Item__c.object
<CustomObject>
    <description>Cart item is used to record history of payments/partial payments of Fees/Invoices/Deposits through Cart</description>
    <fields>
        <fullName>BGBK__Cart__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Cart which was used to pay the cart item</description>
        <inlineHelpText>Cart which was used to pay the cart item</inlineHelpText>
        <label>Cart</label>
        <referenceTo>BGBK__Cart__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>Cart_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated deposit record</description>
        <inlineHelpText>Lookup to the associated deposit record</inlineHelpText>
        <label>Deposit</label>
        <referenceTo>MUSW__Deposit__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated fee record</description>
        <inlineHelpText>Lookup to the associated fee record</inlineHelpText>
        <label>Fee</label>
        <referenceTo>MUSW__Fee__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated invoice record</description>
        <inlineHelpText>Lookup to the associated invoice record</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>BGBK__Bill__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Payment_Amount__c</fullName>
        <description>Payment / Partial Payment amount of the fee/invoice/deposit</description>
        <inlineHelpText>Payment / Partial Payment amount of the fee/invoice/deposit</inlineHelpText>
        <label>Payment Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Cart Item</label>
    <nameField>
        <displayFormat>CI-{0000000}</displayFormat>
        <label>Cart Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cart Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>